--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "./server.js", // Adjust this path to point directly to server.js
+      "src": "server.js", // Adjust this path to point directly to server.js
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "./(.*)",
-      "dest": "/" // Adjust this path as well
+      "src": "/api/(.*)",
+      "dest": "server.js" // Adjust this path as well
     }
   ]
 }
